<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Varianza"
    android:background="@color/fondo">

    <TextView
        android:id="@+id/lblInstVar"
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:text="@string/instruccionesVar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTituloVar"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/lblResVar"
        android:layout_width="186dp"
        android:layout_height="29dp"
        android:text="@string/ResultafoVarianza"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblInstVar"
        app:layout_constraintVertical_bias="0.155" />

    <Button
        android:id="@+id/btnVar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonCalcularVar"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblResVar"
        app:layout_constraintVertical_bias="0.132"
        android:backgroundTint="@color/botones"
        />

    <TextView
        android:id="@+id/lblTituloVar"
        android:layout_width="342dp"
        android:layout_height="101dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/varianza"
        android:textAlignment="center"
        android:textColor="@color/titulo"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVar"
        app:srcCompat="@drawable/planeacion" />

</androidx.constraintlayout.widget.ConstraintLayout>